--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karantina&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
 
@@ -70,18 +71,21 @@ td,tr,p{
 }
 
 .table2{
-margin-top: 10vw;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 
 #f{
-  width: 90vw;
-  margin-left: 5vw;
-  text-align: center;
+  width: 40vw;
+  margin-left: 7vw;
   table-layout: fixed;
-  margin-top: 10vw;
+  margin-top: 5vw;
   line-height:5vh;
-  font-size: 1vw;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'Orelega One', cursive
 }
 
 
@@ -197,7 +201,6 @@ margin-top: 10vw;
 }
 
 
-
 #cpu{
   margin-left: 3vw;
   width: 60vw;
@@ -248,16 +251,31 @@ margin-top: 10vw;
 
 
 @media screen and (max-width:1000px) {
-#f{
-  margin-top: 20vw;
+
+  
+.table2{
+  display: grid;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+  .first{
+    position: sticky;
+  }
+
+  #f{
+    margin-left: -1vw;
+    text-align: center;
+    width: 90vw;
+    margin-top: 10vw;
 }
 
   tr{
-    font-size: 15px;
+    font-size: 10px;
   }
 
   .text{
-    margin-left: 120px;
+    margin-left: 35vw;
     margin-top: 10px;
     font-size: 30px;
   }
@@ -273,22 +291,22 @@ margin-top: 10vw;
 
   .rs{
     margin-top: 20vw;
-    font-size: 30px !important;
+    font-size: 20px !important;
   }
 
   .rs button{
-    font-size: 18px;
+    font-size: 10px;
     border-radius: 5px;
   }
 
   .image3 img{
     margin-top: 10px;
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
   }
 
   .image3::before{
-    font-size: 40px;
+    font-size: 30px;
   }
 
   html{
@@ -301,17 +319,40 @@ margin-top: 10vw;
 
   
 #gpu{
-  width: 70vw !important;
-  height: 35vw !important;
+  width: 90vw !important;
+  height: 55vw !important;
+}
+
+.cpu p{
+  font-size: 30px !important;
+}
+
+.gpu p{
+  font-size: 30px;
 }
 
 
 
 #cpu{
-  width: 70vw;
-  height: 35vw;
+  width: 90vw;
+  height: 55vw;
   margin-bottom: 3vw;
 }
+
+
+
+.videos{
+  margin-left: 5vw;
+  width: 90vw;
+  height: 55vw;
+  margin-bottom: 3vw;
+}
+
+.gamingtest{
+  margin-top: 20px;
+  font-size: 30px;
+}
+
 
 }
 
