--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karantina&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karantina&display=swap');
 
 
 html{
@@ -84,25 +85,10 @@ td,tr,p{
   margin-top: 5vw;
   line-height:5vh;
   font-size: 20px;
-  font-weight: 400;
-  font-family: 'Orelega One', cursive
 }
 
 
-.videos{
-  margin-left: 5vw;
-  width: 70vw;
-  height: 35vw;
-  margin-bottom: 3vw;
-}
 
-.gamingtest{
-  text-align: center;
-  font-family: 'Staatliches', cursive;
-  font-size: 3vw;
-  margin-top: 7vw;
-  margin-bottom: 2.5vw;
-}
 
 .rs{
   display: flex;
@@ -112,18 +98,6 @@ td,tr,p{
   font-weight:100;
   font-size: 2vw;
 }
-/* 
-#button{
-  position: absolute;
-  background-color: turquoise;
-  font-family: 'Staatliches', cursive;
-  font-weight: 400;
-  border-radius: 0.5vw;
-  font-size: 1vw;
-  padding: 0.5vw;
-  visibility: visible;
-} */
-
 
 .button1{
   position: absolute;
@@ -269,10 +243,13 @@ td,tr,p{
     text-align: center;
     width: 90vw;
     margin-top: 10vw;
+
 }
 
+
+
   tr{
-    font-size: 10px;
+    font-size: 20px;
   }
 
   .text{
@@ -280,15 +257,6 @@ td,tr,p{
     margin-top: 10px;
     font-size: 30px;
   }
-  /* .rs{
-    margin-top: 20vw;
-    transform: scale(2.5);
-  }
-
-  .image3{
-    margin-top: 13vw;
-    transform: scale(3);
-  } */
 
   .rs{
     margin-top: 20vw;
@@ -342,17 +310,6 @@ td,tr,p{
 
 
 
-.videos{
-  margin-left: 5vw;
-  width: 90vw;
-  height: 55vw;
-  margin-bottom: 3vw;
-}
-
-.gamingtest{
-  margin-top: 20px;
-  font-size: 30px;
-}
 
 
 }
